remove fixed nav as clashes on mobile

--- a/assets/css/garethr.css
+++ b/assets/css/garethr.css
@@ -6,10 +6,7 @@
 .content {
   margin-left: auto;
   margin-right: auto;
-}
-
-nav {
-  position: fixed;
+  padding-top: 0;
 }
 
 nav ul {
@@ -31,3 +28,5 @@ nav li:first-child a {
   color: #fff;
   background: #ac4142;
 }
+
+
